# pyobs-flipro

./: .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  README.md  build.py  pyproject.toml  setup.py
.github/workflows/: ruff.yml
docs/: Makefile
docs/source/: conf.py  index.rst
pyobs_flipro/: __init__.py  fliprocamera.py  fliprodriver.pyx  gui.py  libflipro.pxd
